--- a/benchmark/type/find_if/hana.std_integer_sequence.cpp.erb
+++ b/benchmark/type/find_if/hana.std_integer_sequence.cpp.erb
@@ -20,6 +20,8 @@ int main() {
     auto sequence = std::integer_sequence<
         <%= (["int"] + (1..n).to_a).join(', ') %>
     >{};
+
+#if defined(METABENCH)
     auto result = hana::find_if(sequence, is_last{});
-    (void)result;
+#endif
 }
